// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DropdownMenu > renders correctly with default props 1`] = `
<DocumentFragment>
  <button
    class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-dropdown-trigger"
    type="button"
  >
    <span>
      title
    </span>
  </button>
</DocumentFragment>
`;

exports[`DropdownMenu > renders correctly with disabled prop 1`] = `
<DocumentFragment>
  <button
    class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-dropdown-trigger"
    disabled=""
    type="button"
  >
    <span>
      title
    </span>
  </button>
</DocumentFragment>
`;

exports[`DropdownMenu > renders correctly with items and onClick handlers 1`] = `
<DocumentFragment>
  <button
    class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-dropdown-trigger"
    type="button"
  >
    <span>
      title
    </span>
  </button>
</DocumentFragment>
`;

exports[`DropdownMenu > renders correctly with overlayClassName 1`] = `
<DocumentFragment>
  <button
    class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-dropdown-trigger"
    type="button"
  >
    <span>
      title
    </span>
  </button>
</DocumentFragment>
`;
